Downgrade code to Java 8